Updates to README
Former-commit-id: 66deab9d6068d65291c533d59233cc3ae2a1457c

--- a/README
+++ b/README
@@ -2,7 +2,9 @@ Broadway.js - A JavaScript H.264 decoder.
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-                THIS IS VERY EARLY PROTOTYPE WORK 
+                THIS IS VERY EARLY PROTOTYPE WORK
+
+                JUST ENOUGH TO MAKE THE DEMO WORK
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
