--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
+The following authors have all licensed their contributions to the project
+under the licensing terms detailed in LICENSE.
+
 Michael Bebenita <mbebenita@gmail.com>
 Alon Zakai <alonzakai@gmail.com>
 Andreas Gal <gal@mozilla.com>
+Mathieu 'p01' Henri <mathieu@p01.org>
