added me to the authors
Former-commit-id: f6f8a8ffde1672f40fbf95d4cd95ce46a983ea87
Former-commit-id: 22c70ab0c1f2420be73d0ca188e313b1d1d91abc

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Michael Bebenita <mbebenita@gmail.com>
 Alon Zakai <alonzakai@gmail.com>
 Andreas Gal <gal@mozilla.com>
 Mathieu 'p01' Henri <mathieu@p01.org>
+Matthias 'soliton4' Behrens <matthias.behrens@gmail.com>
