thank you @oneam
Former-commit-id: 45086ac114b0bc105ac6ab9d98b8d21afcc237db
Former-commit-id: 87729b22fe9040505f415da482635eed33763cd0

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Alon Zakai <alonzakai@gmail.com>
 Andreas Gal <gal@mozilla.com>
 Mathieu 'p01' Henri <mathieu@p01.org>
 Matthias 'soliton4' Behrens <matthias.behrens@gmail.com>
+Sam Leitch @oneam - provided the webgl canvas
